Remove all-channels from show-package
